--- a/.circleci/config.yaml
+++ b/.circleci/config.yaml
@@ -1,26 +1,39 @@
-# Python CircleCI 2.0 configuration file
-version: 2
+version: 2.1
 jobs:
   build:
     docker:
-      - image: circleci/python:3.7
-
-    working_directory: ~/repo
-
+      - image: alpine:3.7
     steps:
-      # Step 1: obtain repo from GitHub
-      - checkout
-      # Step 2: create virtual env and install dependencies
       - run:
-          name: install dependencies
+          name: The First Step
           command: |
-            python3 -m venv venv
-            . venv/bin/activate
-            pip install -r requirements.txt
-      # Step 3: run linter and tests
-      - run:
-          name: run tests
-          command: |
-            . venv/bin/activate
-            flake8 --exclude=venv* --statistics
-            pytest -v --cov=app/app.py
+            echo 'Hello World!'
+            echo 'This is the delivery pipeline'
+#
+#
+# # Python CircleCI 2.0 configuration file
+# version: 2
+# jobs:
+#   build:
+#     docker:
+#       - image: circleci/python:3.7
+#
+#     working_directory: ~/repo
+#
+#     steps:
+#       # Step 1: obtain repo from GitHub
+#       - checkout
+#       # Step 2: create virtual env and install dependencies
+#       - run:
+#           name: install dependencies
+#           command: |
+#             python3 -m venv venv
+#             . venv/bin/activate
+#             pip install -r requirements.txt
+#       # Step 3: run linter and tests
+#       - run:
+#           name: run tests
+#           command: |
+#             . venv/bin/activate
+#             flake8 --exclude=venv* --statistics
+#             pytest -v --cov=app/app.py
