--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,14 +12,15 @@ jobs:
       - checkout
       # Step 2: create virtual env and install dependencies
       - run:
-          name: install dependencies
+          name: Install dependencies
           command: |
             python3 -m venv venv
             . venv/bin/activate
+            pip install --upgrade pip
             pip install -r requirements.txt
       # Step 3: run linter and tests
       - run:
-          name: run tests
+          name: Run tests
           command: |
             . venv/bin/activate
             flake8 --exclude=venv* --statistics
