--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,27 +1,32 @@
-# Python CircleCI 2.0 configuration file
-version: 2
+version: 2.1
 jobs:
-  build:
-    docker:
-      - image: circleci/python:3.7
+    build:
+        docker:
+            - image: circleci/python:3.7
 
-    working_directory: ~/repo
+        working_directory: ~/repo
 
-    steps:
-      # Step 1: obtain repo from GitHub
-      - checkout
-      # Step 2: create virtual env and install dependencies
-      - run:
-          name: Install dependencies
-          command: |
-            python3 -m venv venv
-            . venv/bin/activate
-            pip install --upgrade pip
-            pip install -r requirements.txt
-      # Step 3: run linter and tests
-      - run:
-          name: Run tests
-          command: |
-            . venv/bin/activate
-            flake8 --exclude=venv* --statistics
-            pytest -v --cov=app/app.py
+        steps:
+            # Step 1: obtain repo from GitHub
+            - checkout
+            # Step 2: create virtual env and install dependencies
+            - run:
+                name: Install dependencies
+                command: |
+                python3 -m venv venv
+                . venv/bin/activate
+                pip install --upgrade pip
+                pip install -r requirements.txt
+            # Step 3: run linter and tests
+            - run:
+                name: Run tests
+                command: |
+                . venv/bin/activate
+                mkdir tmp/test_results
+                flake8 --exclude=venv* --statistics
+                pytest -v --junitxml=tmp/test_results/junit.xml --cov=app/app.py
+            # Step 4: store results from tests
+            - store_test_results:
+                path: tmp/test_results
+            - store_artifacts:
+                path: tmp/test_results
