--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,15 +1,13 @@
 version: 2.1
 jobs:
-    build:
+    Build:
         docker:
             - image: circleci/python:3.7
 
         working_directory: ~/repo
 
         steps:
-            # Step 1: obtain repo from GitHub
             - checkout
-            # Step 2: create virtual env and install dependencies
             - run:
                 name: Install dependencies
                 command: |
@@ -17,7 +15,14 @@ jobs:
                     . venv/bin/activate
                     pip install --upgrade pip
                     pip install -r requirements.txt
-            # Step 3: run linter and tests
+    Test:
+        docker:
+            - image: circleci/python:3.7
+
+        working_directory: ~/repo
+
+        steps:
+            - checkout
             - run:
                 name: Run tests
                 command: |
@@ -25,8 +30,16 @@ jobs:
                     mkdir test_results
                     flake8 --exclude=venv* --statistics
                     pytest -v --junitxml=test_results/junit.xml --cov=app/app.py
-            # Step 4: store results from tests
             - store_test_results:
                 path: test_results
             - store_artifacts:
                 path: test_results
+
+workflows:
+    version: 2.1
+    dependencies:
+        jobs:
+            - Build
+            - Test:
+                requires:
+                    - Build
