fix pipeline miss of cov test

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,7 +38,7 @@ jobs:
                     . venv/bin/activate
                     mkdir test_results
                     flake8 --exclude=venv* --statistics
-                    pytest -v --junitxml=test_results/junit.xml --cov=app/app.py
+                    pytest -v --junitxml=test_results/junit.xml --cov=app/test_app.py
             - store_test_results:
                 path: test_results
             - store_artifacts:
