--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,19 @@
 venv/
-.DS_Store
-.coverage
-data
+
+*.pyc
 __pycache__/
+
+.DS_Store
+
+instance/
+
+.pytest_cache/
+.coverage
+htmlcov/
+
+dist/
+build/
+*.egg-info/
+
+data
 process.yml
