--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,23 @@ jobs:
                       paths:
                         - "venv"
 
-    test:
+    linter:
+        executor: default_env
+        steps:
+            - checkout
+            - restore_cache:
+                key: deps1-{{ .Branch }}-{{ checksum "requirements.txt" }}
+            - run:
+                name: Run linter
+                command: |
+                    . venv/bin/activate
+                    flake8 --exclude=venv* --statistics
+            - store_test_results:
+                path: test_results
+            - store_artifacts:
+                path: test_results
+
+    linter:
         executor: default_env
         steps:
             - checkout
@@ -37,7 +53,6 @@ jobs:
                 command: |
                     . venv/bin/activate
                     mkdir test_results
-                    flake8 --exclude=venv* --statistics
                     pytest -v --junitxml=test_results/junit.xml --cov=app/
             - store_test_results:
                 path: test_results
@@ -50,6 +65,9 @@ workflows:
     dependencies:
         jobs:
             - build
-            - test:
+            - linter:
+                requires:
+                    - build
+            - tests:
                 requires:
                     - build
