--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,6 +37,11 @@ jobs:
                 command: |
                     . venv/bin/activate
                     flake8 --exclude=venv* --statistics
+            - store_test_results:
+                path: test-results
+            - store_artifacts:
+                path: test-results
+                destination: linter
 
     tests:
         executor: default_env
@@ -48,12 +53,13 @@ jobs:
                 name: Run tests
                 command: |
                     . venv/bin/activate
-                    mkdir test_results
-                    pytest -v --junitxml=test_results/junit.xml --cov=app/
+                    mkdir test-results
+                    pytest -v --junitxml=test-results/junit.xml --cov=app/
             - store_test_results:
-                path: test_results
+                path: test-results
             - store_artifacts:
-                path: test_results
+                path: test-results
+                destination: tests
 
 
 workflows:
