--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,12 +36,12 @@ jobs:
                 name: Run linter
                 command: |
                     . venv/bin/activate
-                    flake8 --exclude=venv* --statistics
+                    mkdir linter-results
+                    flake8 --exclude=venv* --statistics > linter
             - store_test_results:
                 path: test-results
-            - store_artifacts:
-                path: test-results
                 destination: linter
+
 
     tests:
         executor: default_env
