--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,14 @@
+coverage==5.1
 flake8==3.8.1
 Flask==1.1.2
+ipykernel==5.3.0
+ipython==7.15.0
 Jinja2==2.11.2
+matplotlib==3.2.1
+notebook==6.0.3
 numpy==1.18.4
 pandas==1.0.3
 pytest==5.4.2
 pytest-cov==2.8.1
 python-vuejs==1.0.9
+seaborn==0.10.1
