--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -84,9 +84,9 @@ workflows:
             - linter:
                 requires:
                     - build
-            - test_app:
-                requires:
-                    - build
+            # - test_app:
+            #     requires:
+            #         - build
             - test_preprocessing:
                 requires:
                     - build
