--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,7 @@ jobs:
             - run:
                 name: Install dependencies
                 command: |
-                    export PATH=$PATH:preprocessing/
+                    export PATH=$PATH:/home/circleci/repo/preprocessing/
                     python3 -m venv venv
                     . venv/bin/activate
                     pip install --upgrade pip
