Add repo folder to PATH in CI config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,6 +16,7 @@ jobs:
             - run:
                 name: Install dependencies
                 command: |
+                    echo 'export PATH=/home/circleci/repo/:$PATH' >> $BASH_ENV
                     echo 'export PATH=/home/circleci/repo/preprocessing:$PATH' >> $BASH_ENV
                     python3 -m venv venv
                     . venv/bin/activate
