--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,26 +21,12 @@ jobs:
                     python3 -m venv venv
                     . venv/bin/activate
                     pip install --upgrade pip
+                    pip install -e .
                     pip install -r requirements.txt
             - save_cache:
                       key: deps1-{{ .Branch }}-{{ checksum "requirements.txt" }}
                       paths:
                         - "venv"
-
-    linter:
-        executor: default_env
-        steps:
-            - checkout
-            - restore_cache:
-                key: deps1-{{ .Branch }}-{{ checksum "requirements.txt" }}
-            - run:
-                name: Run linter
-                command: |
-                    . venv/bin/activate
-                    flake8 --exclude=venv* --statistics --output-file linter-results
-            - store_artifacts:
-                path: linter-results
-                destination: linter-results
 
     # test_app:
     #     executor: default_env
@@ -84,9 +70,6 @@ workflows:
     dependencies:
         jobs:
             - build
-            - linter:
-                requires:
-                    - build
             # - test_app:
             #     requires:
             #         - build
