--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,6 +23,7 @@ jobs:
                     pip install --upgrade pip
                     pip install -e .
                     pip install -r requirements.txt
+                    python setup.py
             - save_cache:
                       key: deps1-{{ .Branch }}-{{ checksum "requirements.txt" }}
                       paths:
