--- a/requirements.txt
+++ b/requirements.txt
@@ -5,11 +5,19 @@ hypothesis==5.16.1
 ipykernel==5.3.0
 ipython==7.15.0
 Jinja2==2.11.2
+jupyter-client==6.1.3
+jupyter-core==4.6.3
+Keras==2.4.3
 matplotlib==3.2.1
 notebook==6.0.3
 numpy==1.18.4
 pandas==1.0.3
+pre-commit==2.6.0
+pyflakes==2.2.0
 pytest==5.4.2
 pytest-cov==2.8.1
 python-vuejs==1.0.9
+scipy==1.4.1
 seaborn==0.10.1
+spacy==2.3.2
+tensorflow==2.2.0
