--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,7 +23,11 @@ jobs:
                     pip install --upgrade pip
                     pip install -e .
                     pip install -r requirements.txt
-                    python setup.py egg_info
+
+            - run:
+                name: Python setup
+                command: python setup.py egg_info
+                
             - save_cache:
                       key: deps1-{{ .Branch }}-{{ checksum "requirements.txt" }}
                       paths:
