--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 coverage==5.1
+en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.3.1/en_core_web_sm-2.3.1.tar.gz
 flake8==3.8.1
 Flask==1.1.2
 hypothesis==5.16.1
@@ -19,5 +20,4 @@ pytest-cov==2.8.1
 python-vuejs==1.0.9
 scipy==1.4.1
 seaborn==0.10.1
-spacy==2.3.2
-tensorflow==2.2.0
+torch==1.6.0
