--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 coverage==5.1
 en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.3.1/en_core_web_sm-2.3.1.tar.gz
+flair==0.5.1
 flake8==3.8.1
 Flask==1.1.2
 hypothesis==5.16.1
