--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_
 flair==0.5.1
 flake8==3.8.1
 Flask==1.1.2
+hyperopt==0.2.4
 hypothesis==5.16.1
 ipykernel==5.3.0
 ipython==7.15.0
